add act and update actions

--- a/.mise.toml
+++ b/.mise.toml
@@ -3,6 +3,7 @@ go = "1.22"
 "go:github.com/spf13/cobra-cli" = "latest"
 "go:github.com/vektra/mockery/v2" = "v2.42"
 "go:gotest.tools/gotestsum" = "latest"
+act = "0.2.60"
 
 [tasks.build]
 description = "Build the CLI binary"
