add go git mocking

--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -8,3 +8,8 @@ packages:
       Editor:
         config:
           with-expecter: False
+  ThoughtSync/cmd/repository:
+    interfaces:
+      Repository:
+        config:
+          with-expecter: False
